Fix input-group button out of container issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -199,7 +199,7 @@ a {
   border: 0;
   font-size: 1.8rem;
   font-weight: 600;
-  padding: 2rem 3rem;
+  padding: 2rem 4vw;
   text-transform: uppercase;
   cursor: pointer;
   white-space: nowrap;
@@ -293,6 +293,7 @@ a {
   border: 0;
   flex-grow: 1;
   padding: 1.5rem 2rem;
+  width: 0;
 }
 
 .input-group .btn {
@@ -742,7 +743,7 @@ a {
 .block-domain__prices {
   color: var(--color-headings);
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(2, 6rem);
   font-size: 2rem;
   font-weight: 600;
